<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_vertical|center"
    android:orientation="vertical"
    tools:context=".seans">

    <TextView
        android:id="@+id/seanslar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/seanslar"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <Button
        android:id="@+id/seans1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="satınAl"
        android:text="@string/seans1"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="304dp" />

    <Button
        android:id="@+id/seans2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="satınAl"
        android:text="@string/seans2"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="243dp" />

    <Button
        android:id="@+id/seans3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="satınAl"
        android:text="@string/seans3"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="175dp" />

    <Button
        android:id="@+id/seans4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="satınAl"
        android:text="@string/seans4"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="115dp" />

    <Button
        android:id="@+id/seans5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="satınAl"
        android:text="@string/seans5"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="57dp" />

</LinearLayout>